Added interpretability and file saving steps to train pipeline. Published train pipeline.

--- a/azure/train_pipeline.ipynb
+++ b/azure/train_pipeline.ipynb
@@ -20,7 +20,8 @@
     "from azureml.core.compute_target import ComputeTargetException\n",
     "from azureml.core.environment import Environment\n",
     "from azureml.core.runconfig import RunConfiguration\n",
-    "import shutil"
+    "import shutil\n",
+    "import datetime"
    ]
   },
   {
@@ -30,8 +31,8 @@
    "outputs": [],
    "source": [
     "# Define some constants\n",
-    "CT_NAME = \"ds3v2-clust\"           # Name of our compute cluster\n",
-    "VM_SIZE = \"STANDARD_DS3_V2\"          # Specify the Azure VM for execution of our pipeline\n",
+    "CT_NAME = \"nd12s-clust1\"         # Name of our compute cluster\n",
+    "VM_SIZE = \"STANDARD_ND12S\"       # Specify the Azure VM for execution of our pipeline\n",
     "MIN_NODES = 1                    # Min number of compute nodes in cluster\n",
     "MAX_NODES = 4                    # Max number of compute nodes in cluster"
    ]
@@ -61,28 +62,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get the blob datastore associated with this workspace\n",
-    "blob_store = Datastore(ws, name='hifis_v2_ds')\n",
+    "# Get the blob datastores associated with this workspace\n",
+    "hifis_blob_ds = Datastore(ws, name='hifis_v2_ds')\n",
+    "raw_data_blob_ds = Datastore(ws, name='hifis_raw_ds')\n",
     "\n",
-    "# Create data references to folders on the blob\n",
-    "data_dr = DataReference(\n",
-    "    datastore=blob_store,\n",
-    "    data_reference_name=\"data\",\n",
-    "    path_on_datastore=\"data/\")\n",
+    "# Create data references to folders on the blobs\n",
+    "raw_data_dr = DataReference(\n",
+    "    datastore=raw_data_blob_ds,\n",
+    "    data_reference_name=\"raw_data\",\n",
+    "    path_on_datastore=\"hifis/\")\n",
     "training_logs_dr = DataReference(\n",
-    "    datastore=blob_store,\n",
+    "    datastore=hifis_blob_ds,\n",
     "    data_reference_name=\"training_logs_data\",\n",
     "    path_on_datastore=\"logs/training/\")\n",
-    "models_dr = DataReference(\n",
-    "    datastore=blob_store,\n",
-    "    data_reference_name=\"models_data\",\n",
-    "    path_on_datastore=\"models/\")\n",
+    "outputs_dr = DataReference(\n",
+    "    datastore=hifis_blob_ds,\n",
+    "    data_reference_name=\"outputs\",\n",
+    "    path_on_datastore=\"outputs/\")\n",
     "\n",
     "# Set up references to pipeline data (intermediate pipeline storage).\n",
-    "processed_pd = PipelineData(\n",
-    "    \"processed_data\",\n",
-    "    datastore=blob_store,\n",
-    "    output_name=\"processed_data\",\n",
+    "preprocess_pd = PipelineData(\n",
+    "    \"preprocessed_output\",\n",
+    "    datastore=hifis_blob_ds,\n",
+    "    output_name=\"preprocessed_output\",\n",
+    "    output_mode=\"mount\")\n",
+    "train_pd = PipelineData(\n",
+    "    \"train_output\",\n",
+    "    datastore=hifis_blob_ds,\n",
+    "    output_name=\"train_output\",\n",
+    "    output_mode=\"mount\")\n",
+    "interpretability_pd = PipelineData(\n",
+    "    \"interpretability_output\",\n",
+    "    datastore=hifis_blob_ds,\n",
+    "    output_name=\"interpretability_output\",\n",
     "    output_mode=\"mount\")"
    ]
   },
@@ -115,16 +127,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define preprocessing step the ML pipeline\n",
+    "# Define preprocessing step in the ML pipeline\n",
     "step1 = PythonScriptStep(name=\"preprocess_step\",\n",
     "                         script_name=\"azure/preprocess_step/preprocess_step.py\",\n",
-    "                         arguments=[\"--datadir\", data_dr, \"--preprocesseddir\", processed_pd],\n",
-    "                         inputs=[data_dr],\n",
-    "                         outputs=[processed_pd],\n",
+    "                         arguments=[\"--rawdatadir\", raw_data_dr, \"--preprocessedoutputdir\", preprocess_pd],\n",
+    "                         inputs=[raw_data_dr],\n",
+    "                         outputs=[preprocess_pd],\n",
     "                         compute_target=compute_target, \n",
     "                         source_directory=\"./../\",\n",
     "                         runconfig=runconfig,\n",
-    "                         allow_reuse=True)\n",
+    "                         allow_reuse=False)\n",
     "\n",
     "# Define training step in the ML pipeline\n",
     "est = TensorFlow(source_directory='./../',\n",
@@ -133,19 +145,43 @@
     "                   entry_script='azure/train_step/train_step.py',\n",
     "                   pip_packages=['tensorboard', 'pandas', 'dill', 'numpy', 'imblearn', 'matplotlib', 'tqdm', 'scikit-learn',\n",
     "                                'category_encoders'],\n",
-    "                   use_gpu=False,\n",
+    "                   use_gpu=True,\n",
     "                   framework_version='2.0')\n",
-    "step2 = EstimatorStep(name=\"estimator_train_step\", \n",
+    "step2 = EstimatorStep(name=\"multi_train_step\", \n",
     "                      estimator=est, \n",
-    "                      estimator_entry_script_arguments=[\"--preprocesseddir\", processed_pd, \"--datadir\", data_dr,  \n",
-    "                                                        \"--traininglogsdir\", training_logs_dr, \"--modelsdir\", models_dr],\n",
+    "                      estimator_entry_script_arguments=[\"--preprocessedoutputdir\", preprocess_pd, \"--traininglogsdir\", \n",
+    "                                                        training_logs_dr, \"--trainoutputdir\", train_pd],\n",
     "                      runconfig_pipeline_params=None, \n",
-    "                      inputs=[processed_pd, data_dr, training_logs_dr, models_dr], \n",
-    "                      outputs=[], \n",
+    "                      inputs=[preprocess_pd, training_logs_dr], \n",
+    "                      outputs=[train_pd], \n",
     "                      compute_target=compute_target)\n",
     "\n",
+    "# Define interpretability step in the ML pipeline\n",
+    "step3 = PythonScriptStep(name=\"interpretability_step\",\n",
+    "                         script_name=\"azure/interpretability_step/interpretability_step.py\",\n",
+    "                         arguments=[\"--preprocessedoutputdir\", preprocess_pd, \"--trainoutputdir\", train_pd, \n",
+    "                                    \"--interpretabilityoutputdir\", interpretability_pd],\n",
+    "                         inputs=[preprocess_pd, train_pd],\n",
+    "                         outputs=[interpretability_pd],\n",
+    "                         compute_target=compute_target, \n",
+    "                         source_directory=\"./../\",\n",
+    "                         runconfig=runconfig,\n",
+    "                         allow_reuse=False)\n",
+    "\n",
+    "# Define final step to save all produced files to persistent blob storage\n",
+    "step4 = PythonScriptStep(name=\"save_step\",\n",
+    "                         script_name=\"azure/save_step/save_step.py\",\n",
+    "                         arguments=[\"--preprocessedoutputdir\", preprocess_pd, \"--trainoutputdir\", train_pd, \n",
+    "                                    \"--interpretabilityoutputdir\", interpretability_pd, \"--outputsdir\", outputs_dr],\n",
+    "                         inputs=[preprocess_pd, train_pd, interpretability_pd, outputs_dr],\n",
+    "                         outputs=[],\n",
+    "                         compute_target=compute_target, \n",
+    "                         source_directory=\"./../\",\n",
+    "                         runconfig=runconfig,\n",
+    "                         allow_reuse=False)\n",
+    "\n",
     "# Construct the ML pipeline from the steps\n",
-    "steps = [step1, step2]\n",
+    "steps = [step1, step2, step3, step4]\n",
     "single_train_pipeline = Pipeline(workspace=ws, steps=steps)\n",
     "single_train_pipeline.validate()\n",
     "\n",
@@ -166,6 +202,12 @@
    "source": [
     "# Wait for the pipeline to finish running.\n",
     "train_run.wait_for_completion()\n",
+    "\n",
+    "# Publish the pipeline.\n",
+    "published_pipeline = train_run.publish_pipeline(\n",
+    "     name=\"Training Pipeline\",\n",
+    "     description=\"Azure ML Pipeline that trains HIFIS-v2 model and runs LIME submodular pick.\",\n",
+    "     version=\"1.0\")\n",
     "\n",
     "# Delete compute cluster to avoid extra charges\n",
     "compute_target.delete()"
