Saving of logs to persistent storage

--- a/azure/train_pipeline.ipynb
+++ b/azure/train_pipeline.ipynb
@@ -31,8 +31,8 @@
    "outputs": [],
    "source": [
     "# Define some constants\n",
-    "CT_NAME = \"nd12s-clust1\"         # Name of our compute cluster\n",
-    "VM_SIZE = \"STANDARD_ND12S\"       # Specify the Azure VM for execution of our pipeline\n",
+    "CT_NAME = \"ds3v2-cluster\"           # Name of our compute cluster\n",
+    "VM_SIZE = \"STANDARD_DS3_V2\"          # Specify the Azure VM for execution of our pipeline\n",
     "MIN_NODES = 1                    # Min number of compute nodes in cluster\n",
     "MAX_NODES = 4                    # Max number of compute nodes in cluster"
    ]
@@ -71,10 +71,6 @@
     "    datastore=raw_data_blob_ds,\n",
     "    data_reference_name=\"raw_data\",\n",
     "    path_on_datastore=\"hifis/\")\n",
-    "training_logs_dr = DataReference(\n",
-    "    datastore=hifis_blob_ds,\n",
-    "    data_reference_name=\"training_logs_data\",\n",
-    "    path_on_datastore=\"logs/training/\")\n",
     "outputs_dr = DataReference(\n",
     "    datastore=hifis_blob_ds,\n",
     "    data_reference_name=\"outputs\",\n",
@@ -149,10 +145,9 @@
     "                   framework_version='2.0')\n",
     "step2 = EstimatorStep(name=\"multi_train_step\", \n",
     "                      estimator=est, \n",
-    "                      estimator_entry_script_arguments=[\"--preprocessedoutputdir\", preprocess_pd, \"--traininglogsdir\", \n",
-    "                                                        training_logs_dr, \"--trainoutputdir\", train_pd],\n",
+    "                      estimator_entry_script_arguments=[\"--preprocessedoutputdir\", preprocess_pd, \"--trainoutputdir\", train_pd],\n",
     "                      runconfig_pipeline_params=None, \n",
-    "                      inputs=[preprocess_pd, training_logs_dr], \n",
+    "                      inputs=[preprocess_pd], \n",
     "                      outputs=[train_pd], \n",
     "                      compute_target=compute_target)\n",
     "\n",
@@ -205,7 +200,7 @@
     "\n",
     "# Publish the pipeline.\n",
     "published_pipeline = train_run.publish_pipeline(\n",
-    "     name=\"Training Pipeline\",\n",
+    "     name=\"HIFIS-v2 Training Pipeline\",\n",
     "     description=\"Azure ML Pipeline that trains HIFIS-v2 model and runs LIME submodular pick.\",\n",
     "     version=\"1.0\")\n",
     "\n",
