--- a/azure/inference_pipeline.ipynb
+++ b/azure/inference_pipeline.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Azure ML Training Pipeline for HIFIS-v2\n",
-    "This notebook defines an Azure machine learning pipeline for a multi-train experiment and submits the pipeline as an experiment to be run on an Azure virtual machine. It then publishes the pipeline in the workspace."
+    "# Azure ML Inference Pipeline for HIFIS-v2\n",
+    "This notebook defines an Azure machine learning pipeline for batch inference and submits the pipeline as an experiment to be run on an Azure virtual machine. It then publishes the pipeline in the workspace and schedules it to be run at a regular interval."
    ]
   },
   {
@@ -21,6 +21,7 @@
     "from azureml.data.data_reference import DataReference\n",
     "from azureml.pipeline.core import PipelineData\n",
     "from azureml.pipeline.core import Pipeline\n",
+    "from azureml.pipeline.core.schedule import ScheduleRecurrence, Schedule\n",
     "from azureml.pipeline.steps import PythonScriptStep, EstimatorStep\n",
     "from azureml.train.dnn import TensorFlow\n",
     "from azureml.train.estimator import Estimator\n",
@@ -28,8 +29,7 @@
     "from azureml.core.compute_target import ComputeTargetException\n",
     "from azureml.core.environment import Environment\n",
     "from azureml.core.runconfig import RunConfiguration\n",
-    "import shutil\n",
-    "import datetime"
+    "import shutil"
    ]
   },
   {
@@ -81,26 +81,16 @@
     "    datastore=raw_data_blob_ds,\n",
     "    data_reference_name=\"raw_data\",\n",
     "    path_on_datastore=\"hifis/\")\n",
-    "outputs_dr = DataReference(\n",
+    "inference_dr = DataReference(\n",
     "    datastore=hifis_blob_ds,\n",
-    "    data_reference_name=\"outputs\",\n",
-    "    path_on_datastore=\"outputs/\")\n",
+    "    data_reference_name=\"inference\",\n",
+    "    path_on_datastore=\"inference/\")\n",
     "\n",
-    "# Set up references to pipeline data (intermediate pipeline storage).\n",
+    "# Set up intermediate pipeline data to store preprocessed data and serialized objects needed for inference (e.g. explainer)\n",
     "preprocess_pd = PipelineData(\n",
     "    \"preprocessed_output\",\n",
     "    datastore=hifis_blob_ds,\n",
     "    output_name=\"preprocessed_output\",\n",
-    "    output_mode=\"mount\")\n",
-    "train_pd = PipelineData(\n",
-    "    \"train_output\",\n",
-    "    datastore=hifis_blob_ds,\n",
-    "    output_name=\"train_output\",\n",
-    "    output_mode=\"mount\")\n",
-    "interpretability_pd = PipelineData(\n",
-    "    \"interpretability_output\",\n",
-    "    datastore=hifis_blob_ds,\n",
-    "    output_name=\"interpretability_output\",\n",
     "    output_mode=\"mount\")"
    ]
   },
@@ -122,7 +112,7 @@
     "CT_NAME = \"ds3v2-cluster\"           # Name of our compute cluster\n",
     "VM_SIZE = \"STANDARD_DS3_V2\"          # Specify the Azure VM for execution of our pipeline\n",
     "MIN_NODES = 1                    # Min number of compute nodes in cluster\n",
-    "MAX_NODES = 4                    # Max number of compute nodes in cluster\n",
+    "MAX_NODES = 3                    # Max number of compute nodes in cluster\n",
     "\n",
     "# Set up the compute target for this experiment\n",
     "try:\n",
@@ -158,64 +148,36 @@
     "# Define preprocessing step in the ML pipeline\n",
     "step1 = PythonScriptStep(name=\"preprocess_step\",\n",
     "                         script_name=\"azure/preprocess_step/preprocess_step.py\",\n",
-    "                         arguments=[\"--rawdatadir\", raw_data_dr, \"--preprocessedoutputdir\", preprocess_pd],\n",
-    "                         inputs=[raw_data_dr],\n",
+    "                         arguments=[\"--rawdatadir\", raw_data_dr, \"--inferencedir\", inference_dr, \"--preprocessedoutputdir\", \n",
+    "                                    preprocess_pd],\n",
+    "                         inputs=[raw_data_dr, inference_dr],\n",
     "                         outputs=[preprocess_pd],\n",
     "                         compute_target=compute_target, \n",
     "                         source_directory=\"./../\",\n",
     "                         runconfig=runconfig,\n",
-    "                         params={\"PIPELINE\": \"train\"},\n",
+    "                         params={\"PIPELINE\": \"inference\"},\n",
     "                         allow_reuse=False)\n",
     "\n",
-    "# Define training step in the ML pipeline\n",
-    "est = TensorFlow(source_directory='./../',\n",
-    "                   script_params=None,\n",
-    "                   compute_target=compute_target,\n",
-    "                   entry_script='azure/train_step/train_step.py',\n",
-    "                   pip_packages=['tensorboard', 'pandas', 'dill', 'numpy', 'imblearn', 'matplotlib', 'tqdm', 'scikit-learn',\n",
-    "                                'category_encoders'],\n",
-    "                   use_gpu=True,\n",
-    "                   framework_version='2.0')\n",
-    "step2 = EstimatorStep(name=\"multi_train_step\", \n",
-    "                      estimator=est, \n",
-    "                      estimator_entry_script_arguments=[\"--preprocessedoutputdir\", preprocess_pd, \"--trainoutputdir\", train_pd],\n",
-    "                      runconfig_pipeline_params=None, \n",
-    "                      inputs=[preprocess_pd], \n",
-    "                      outputs=[train_pd], \n",
-    "                      compute_target=compute_target)\n",
-    "\n",
-    "# Define interpretability step in the ML pipeline\n",
-    "step3 = PythonScriptStep(name=\"interpretability_step\",\n",
-    "                         script_name=\"azure/interpretability_step/interpretability_step.py\",\n",
-    "                         arguments=[\"--preprocessedoutputdir\", preprocess_pd, \"--trainoutputdir\", train_pd, \n",
-    "                                    \"--interpretabilityoutputdir\", interpretability_pd],\n",
-    "                         inputs=[preprocess_pd, train_pd],\n",
-    "                         outputs=[interpretability_pd],\n",
-    "                         compute_target=compute_target, \n",
-    "                         source_directory=\"./../\",\n",
-    "                         runconfig=runconfig,\n",
-    "                         allow_reuse=False)\n",
-    "\n",
-    "# Define final step to save all produced files to persistent blob storage\n",
-    "step4 = PythonScriptStep(name=\"save_step\",\n",
-    "                         script_name=\"azure/save_step/save_step.py\",\n",
-    "                         arguments=[\"--preprocessedoutputdir\", preprocess_pd, \"--trainoutputdir\", train_pd, \n",
-    "                                    \"--interpretabilityoutputdir\", interpretability_pd, \"--outputsdir\", outputs_dr],\n",
-    "                         inputs=[preprocess_pd, train_pd, interpretability_pd, outputs_dr],\n",
+    "# Define batch inference step in the ML pipeline\n",
+    "step2 = PythonScriptStep(name=\"inference_step\",\n",
+    "                         script_name=\"azure/inference_step/inference_step.py\",\n",
+    "                         arguments=[\"--preprocessedoutputdir\", preprocess_pd, \"--inferencedir\", inference_dr],\n",
+    "                         inputs=[preprocess_pd, inference_dr],\n",
     "                         outputs=[],\n",
     "                         compute_target=compute_target, \n",
     "                         source_directory=\"./../\",\n",
     "                         runconfig=runconfig,\n",
     "                         allow_reuse=False)\n",
     "\n",
+    "\n",
     "# Construct the ML pipeline from the steps\n",
-    "steps = [step1, step2, step3, step4]\n",
-    "single_train_pipeline = Pipeline(workspace=ws, steps=steps)\n",
-    "single_train_pipeline.validate()\n",
+    "steps = [step1, step2]\n",
+    "inference_pipeline = Pipeline(workspace=ws, steps=steps)\n",
+    "inference_pipeline.validate()\n",
     "\n",
     "# Define a new experiment and submit a new pipeline run to the compute target.\n",
-    "experiment = Experiment(workspace=ws, name='MultiTrainExperiment_v1')\n",
-    "train_run = experiment.submit(single_train_pipeline, regenerate_outputs=False)\n",
+    "experiment = Experiment(workspace=ws, name='BatchInferenceExperiment_v2')\n",
+    "inference_run = experiment.submit(inference_pipeline, regenerate_outputs=False)\n",
     "print(\"Pipeline is submitted for execution\")\n",
     "\n",
     "# Move AML ignore file back to original folder\n",
@@ -237,16 +199,56 @@
    "outputs": [],
    "source": [
     "# Wait for the pipeline to finish running.\n",
-    "train_run.wait_for_completion()\n",
+    "inference_run.wait_for_completion()\n",
     "\n",
     "# Publish the pipeline.\n",
-    "published_pipeline = train_run.publish_pipeline(\n",
-    "     name=\"HIFIS-v2 Training Pipeline\",\n",
-    "     description=\"Azure ML Pipeline that trains HIFIS-v2 model and runs LIME submodular pick.\",\n",
-    "     version=\"1.0\")\n",
-    "\n",
-    "# Delete compute cluster to avoid extra charges\n",
-    "compute_target.delete()"
+    "published_pipeline = inference_run.publish_pipeline(\n",
+    "     name=\"HIFIS-v2 Inference Pipeline\",\n",
+    "     description=\"Azure ML Pipeline that runs inference on all clients in HIFIS database and computes LIME explanations\",\n",
+    "     version=\"1.0\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Schedule the pipeline\n",
+    "Schedule the published pipeline to run weekly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recurrence = ScheduleRecurrence(frequency=\"Minute\", interval=10)\n",
+    "pipeline_id = \"inference-pipeline\"\n",
+    "recurring_schedule = Schedule.create(ws, name=\"MyRecurringSchedule\", \n",
+    "                            description=\"Scheduled weekly batch inference\",\n",
+    "                            pipeline_id=published_pipeline.id, \n",
+    "                            experiment_name=experiment.name, \n",
+    "                            recurrence=recurrence)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Disable schedule pipelines\n",
+    "Disable all scheduled pipelines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "schedules = Schedule.list(ws)\n",
+    "for schedule in schedules:\n",
+    "    schedule = next(schedule)\n",
+    "    schedule.disable()"
    ]
   },
   {
