Log all models' metrics in multi-train experiment. Send submodular pick and test set metrics to business outputs folder.

--- a/azure/inference_pipeline.ipynb
+++ b/azure/inference_pipeline.ipynb
@@ -109,8 +109,8 @@
    "outputs": [],
    "source": [
     "# Define some constants\n",
-    "CT_NAME = \"ds3v2-cluster\"           # Name of our compute cluster\n",
-    "VM_SIZE = \"STANDARD_DS3_V2\"          # Specify the Azure VM for execution of our pipeline\n",
+    "CT_NAME = \"ds3v2-infer\"          # Name of our compute cluster\n",
+    "VM_SIZE = \"STANDARD_DS3_V2\"      # Specify the Azure VM for execution of our pipeline\n",
     "MIN_NODES = 1                    # Min number of compute nodes in cluster\n",
     "MAX_NODES = 3                    # Max number of compute nodes in cluster\n",
     "\n",
@@ -120,7 +120,7 @@
     "    print(\"Found existing compute target.\")\n",
     "except ComputeTargetException:\n",
     "    print(\"Creating new compute target\")\n",
-    "    provisioning_config = AmlCompute.provisioning_configuration(vm_size=VM_SIZE, min_nodes=1, max_nodes=4)    \n",
+    "    provisioning_config = AmlCompute.provisioning_configuration(vm_size=VM_SIZE, min_nodes=MIN_NODES, max_nodes=MAX_NODES)    \n",
     "    compute_target = ComputeTarget.create(ws, CT_NAME, provisioning_config)  # Create the compute cluster\n",
     "    \n",
     "    # Wait for cluster to be provisioned\n",
@@ -224,7 +224,7 @@
    "source": [
     "recurrence = ScheduleRecurrence(frequency=\"Minute\", interval=10)\n",
     "pipeline_id = \"inference-pipeline\"\n",
-    "recurring_schedule = Schedule.create(ws, name=\"MyRecurringSchedule\", \n",
+    "recurring_schedule = Schedule.create(ws, name=\"WeeklyInferenceSchedule\", \n",
     "                            description=\"Scheduled weekly batch inference\",\n",
     "                            pipeline_id=published_pipeline.id, \n",
     "                            experiment_name=experiment.name, \n",
