Run fails and email sent if no new records in raw HIFIS data within last week

--- a/azure/inference_pipeline.ipynb
+++ b/azure/inference_pipeline.ipynb
@@ -50,6 +50,8 @@
     "\n",
     "# Set workspace's environment\n",
     "env = Environment.from_pip_requirements(name = \"HIFIS_env\", file_path = \"./../requirements.txt\")\n",
+    "env.python.conda_dependencies.add_pip_package(\"azureml-core\")\n",
+    "env.python.conda_dependencies.add_pip_package(\"sendgrid\")\n",
     "env.register(workspace=ws)\n",
     "runconfig = RunConfiguration(conda_dependencies=env.python.conda_dependencies)\n",
     "print(env.python.conda_dependencies.serialize_to_string())\n",
