--- a/azure/train_pipeline.ipynb
+++ b/azure/train_pipeline.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,52 +41,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "# Conda environment specification. The dependencies defined in this file will\r\n",
-      "# be automatically provisioned for runs with userManagedDependencies=False.\r\n",
-      "\n",
-      "# Details about the Conda environment file format:\r\n",
-      "# https://conda.io/docs/user-guide/tasks/manage-environments.html#create-env-file-manually\r\n",
-      "\n",
-      "name: project_environment\n",
-      "dependencies:\n",
-      "  # The python interpreter version.\r\n",
-      "  # Currently Azure ML only supports 3.5.2 and later.\r\n",
-      "- python=3.6.2\n",
-      "\n",
-      "- pip:\n",
-      "  - pyyaml==5.2\n",
-      "  - matplotlib==3.1.1\n",
-      "  - numpy==1.17.4\n",
-      "  - tensorflow_gpu==2.0.1\n",
-      "  - tensorboard==2.0.2\n",
-      "  - lime==0.1.1.37\n",
-      "  - scipy==1.4.1\n",
-      "  - category_encoders==2.1.0\n",
-      "  - imbalanced_learn==0.6.1\n",
-      "  - tqdm==4.40.2\n",
-      "  - pandas==0.25.3\n",
-      "  - kmodes==0.10.2\n",
-      "  - dill==0.3.0\n",
-      "channels:\n",
-      "- anaconda\n",
-      "- conda-forge\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get reference to the workspace\n",
     "ws = Workspace.from_config(\"./ws_config.json\")\n",
     "\n",
     "# Set workspace's environment\n",
     "env = Environment.from_pip_requirements(name = \"HIFIS_env\", file_path = \"./../requirements.txt\")\n",
+    "env.python.conda_dependencies.add_pip_package(\"azureml-core\")\n",
+    "env.python.conda_dependencies.add_pip_package(\"sendgrid\")\n",
     "env.register(workspace=ws)\n",
     "runconfig = RunConfiguration(conda_dependencies=env.python.conda_dependencies)\n",
     "print(env.python.conda_dependencies.serialize_to_string())\n",
@@ -105,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,19 +116,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found existing compute target.\n",
-      "Azure Machine Learning Compute attached\n",
-      "Compute targets:  {'ds3v2-cluster': AmlCompute(workspace=Workspace.create(name='hifis-v2-ws-canada', subscription_id='4d8a1c27-3a23-4f81-8fec-5b598044652e', resource_group='hifis-v2-rg'), name=ds3v2-cluster, id=/subscriptions/4d8a1c27-3a23-4f81-8fec-5b598044652e/resourceGroups/hifis-v2-rg/providers/Microsoft.MachineLearningServices/workspaces/hifis-v2-ws-canada/computes/ds3v2-cluster, type=AmlCompute, provisioning_state=Succeeded, location=canadacentral, tags=None), 'ds3v2-train': AmlCompute(workspace=Workspace.create(name='hifis-v2-ws-canada', subscription_id='4d8a1c27-3a23-4f81-8fec-5b598044652e', resource_group='hifis-v2-rg'), name=ds3v2-train, id=/subscriptions/4d8a1c27-3a23-4f81-8fec-5b598044652e/resourceGroups/hifis-v2-rg/providers/Microsoft.MachineLearningServices/workspaces/hifis-v2-ws-canada/computes/ds3v2-train, type=AmlCompute, provisioning_state=Succeeded, location=canadacentral, tags=None)}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define some constants\n",
     "CT_NAME = \"ds3v2-train\"          # Name of our compute cluster\n",
@@ -198,29 +153,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Step preprocess_step is ready to be created [111d98d4]\n",
-      "Step multi_train_step is ready to be created [69b74aba]\n",
-      "Step interpretability_step is ready to be created [80c627c2]\n",
-      "Step save_step is ready to be created [8a735675]\n",
-      "Created step preprocess_step [111d98d4][8e9118a0-a2a5-4501-a096-bd3e74d87777], (This step will run and generate new outputs)\n",
-      "Created step multi_train_step [69b74aba][6574f9fc-7cb2-49bf-bff3-0109e188aea0], (This step will run and generate new outputs)\n",
-      "Created step interpretability_step [80c627c2][f3d8200b-3563-4740-98ed-b7396d54325a], (This step will run and generate new outputs)\n",
-      "Created step save_step [8a735675][698ebe33-90fb-42a9-ab13-9bd4d4ac7c79], (This step will run and generate new outputs)\n",
-      "Using data reference raw_data for StepId [8daae77c][c88b15f3-6e00-4ddd-b91e-751c333763ff], (Consumers of this data are eligible to reuse prior runs.)\n",
-      "Using data reference outputs for StepId [74065a21][7f87b0ac-fd71-424a-a9e6-8d7dc3d6a830], (Consumers of this data are eligible to reuse prior runs.)\n",
-      "Submitted PipelineRun f49de01c-194e-40c7-bc89-4583a4bb8312\n",
-      "Link to Azure Machine Learning Portal: https://ml.azure.com/experiments/MultiTrainExperiment_v1/runs/f49de01c-194e-40c7-bc89-4583a4bb8312?wsid=/subscriptions/4d8a1c27-3a23-4f81-8fec-5b598044652e/resourcegroups/hifis-v2-rg/workspaces/hifis-v2-ws-canada\n",
-      "Pipeline is submitted for execution\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define preprocessing step in the ML pipeline\n",
     "step1 = PythonScriptStep(name=\"preprocess_step\",\n",
