Fraction for submodular pick instead of sample size. Updated Azure docs in README.

--- a/azure/inference_pipeline.ipynb
+++ b/azure/inference_pipeline.ipynb
@@ -224,7 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "recurrence = ScheduleRecurrence(frequency=\"Minute\", interval=10)\n",
+    "recurrence = ScheduleRecurrence(frequency=\"Week\", interval=1)\n",
     "pipeline_id = \"inference-pipeline\"\n",
     "recurring_schedule = Schedule.create(ws, name=\"WeeklyInferenceSchedule\", \n",
     "                            description=\"Scheduled weekly batch inference\",\n",
@@ -237,7 +237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Disable schedule pipelines\n",
+    "### Disable scheduled pipelines\n",
     "Disable all scheduled pipelines"
    ]
   },
@@ -249,7 +249,7 @@
    "source": [
     "schedules = Schedule.list(ws)\n",
     "for schedule in schedules:\n",
-    "    schedule = next(schedule)\n",
+    "    print(schedule)\n",
     "    schedule.disable()"
    ]
   },
