--- a/azure/train_pipeline.ipynb
+++ b/azure/train_pipeline.ipynb
@@ -245,10 +245,15 @@
     "published_pipeline = train_run.publish_pipeline(\n",
     "     name=\"HIFIS-v2 Training Pipeline\",\n",
     "     description=\"Azure ML Pipeline that trains HIFIS-v2 model and runs LIME submodular pick.\",\n",
-    "     version=\"1.0\")\n",
-    "\n",
-    "# Delete compute cluster to avoid extra charges\n",
-    "#compute_target.delete()"
+    "     version=\"1.0\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Delete the compute target\n",
+    "Delete the training compute cluster to prevent further cost."
    ]
   },
   {
@@ -256,7 +261,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Delete compute cluster to avoid extra charges\n",
+    "compute_target.delete()"
+   ]
   }
  ],
  "metadata": {
