Modified LIME package to work with sparse matrices, keeping discretization.

--- a/azure/inference_pipeline.ipynb
+++ b/azure/inference_pipeline.ipynb
@@ -20,7 +20,7 @@
     "from azureml.core import Workspace, Datastore\n",
     "from azureml.data.data_reference import DataReference\n",
     "from azureml.pipeline.core import PipelineData\n",
-    "from azureml.pipeline.core import Pipeline\n",
+    "from azureml.pipeline.core import Pipeline, PipelineRun\n",
     "from azureml.pipeline.core.schedule import ScheduleRecurrence, Schedule\n",
     "from azureml.pipeline.steps import PythonScriptStep, EstimatorStep\n",
     "from azureml.train.dnn import TensorFlow\n",
@@ -201,7 +201,8 @@
    "outputs": [],
    "source": [
     "# Wait for the pipeline to finish running.\n",
-    "inference_run.wait_for_completion()\n",
+    "#inference_run.wait_for_completion()\n",
+    "inference_run = PipelineRun.get(ws, '05ae3b07-e3a6-4aaf-ac83-520023e98648')\n",
     "\n",
     "# Publish the pipeline.\n",
     "published_pipeline = inference_run.publish_pipeline(\n",
