Updated pipeline notebooks to reflect change in Azure env

--- a/azure/inference_pipeline.ipynb
+++ b/azure/inference_pipeline.ipynb
@@ -75,7 +75,7 @@
    "outputs": [],
    "source": [
     "# Get the blob datastores associated with this workspace\n",
-    "hifis_blob_ds = Datastore(ws, name='hifis_v2_ds')\n",
+    "hifis_blob_ds = Datastore(ws, name='hifisv2_ds')\n",
     "raw_data_blob_ds = Datastore(ws, name='hifis_raw_ds')\n",
     "\n",
     "# Create data references to folders on the blobs\n",
