--- a/azure/inference_pipeline.ipynb
+++ b/azure/inference_pipeline.ipynb
@@ -178,7 +178,7 @@
     "inference_pipeline.validate()\n",
     "\n",
     "# Define a new experiment and submit a new pipeline run to the compute target.\n",
-    "experiment = Experiment(workspace=ws, name='BatchInferenceExperiment_v3')\n",
+    "experiment = Experiment(workspace=ws, name='BatchInferenceExperiment_v4')\n",
     "inference_run = experiment.submit(inference_pipeline, regenerate_outputs=False)\n",
     "print(\"Pipeline is submitted for execution\")\n",
     "\n",
@@ -201,8 +201,7 @@
    "outputs": [],
    "source": [
     "# Wait for the pipeline to finish running.\n",
-    "#inference_run.wait_for_completion()\n",
-    "inference_run = PipelineRun.get(ws, '05ae3b07-e3a6-4aaf-ac83-520023e98648')\n",
+    "inference_run.wait_for_completion()\n",
     "\n",
     "# Publish the pipeline.\n",
     "published_pipeline = inference_run.publish_pipeline(\n",
@@ -253,6 +252,13 @@
     "    print(schedule)\n",
     "    schedule.disable()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -271,9 +277,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
