Ensured no extra records created for clients with no service features

--- a/azure/inference_pipeline.ipynb
+++ b/azure/inference_pipeline.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Azure ML Inference Pipeline for HIFIS-v2\n",
+    "# Azure ML Inference Pipeline for HIFIS-RNN-MLP\n",
     "This notebook defines an Azure machine learning pipeline for batch inference and submits the pipeline as an experiment to be run on an Azure virtual machine. It then publishes the pipeline in the workspace and schedules it to be run at a regular interval."
    ]
   },
@@ -75,7 +75,7 @@
    "outputs": [],
    "source": [
     "# Get the blob datastores associated with this workspace\n",
-    "hifis_blob_ds = Datastore(ws, name='hifisv2_ds')\n",
+    "hifis_blob_ds = Datastore(ws, name='hifisrnnmlp_ds')\n",
     "raw_data_blob_ds = Datastore(ws, name='hifis_raw_ds')\n",
     "\n",
     "# Create data references to folders on the blobs\n",
@@ -201,13 +201,12 @@
    "outputs": [],
    "source": [
     "# Wait for the pipeline to finish running.\n",
-    "#inference_run.wait_for_completion()\n",
-    "inference_run = PipelineRun.get(ws, '05ae3b07-e3a6-4aaf-ac83-520023e98648')\n",
+    "inference_run.wait_for_completion()\n",
     "\n",
     "# Publish the pipeline.\n",
     "published_pipeline = inference_run.publish_pipeline(\n",
-    "     name=\"HIFIS-v2 Inference Pipeline\",\n",
-    "     description=\"Azure ML Pipeline that runs inference on all clients in HIFIS database and computes LIME explanations\",\n",
+    "     name=\"HIFIS-RNN-MLP Inference Pipeline\",\n",
+    "     description=\"Azure ML Pipeline that runs model inference on all clients in HIFIS database and computes LIME explanations\",\n",
     "     version=\"1.0\")"
    ]
   },
