Changed aggregation to ensure most recent value for TotalScore

--- a/azure/train_pipeline.ipynb
+++ b/azure/train_pipeline.ipynb
@@ -267,6 +267,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Wait for the pipeline to finish running.\n",
+    "train_run.wait_for_completion()\n",
+    "\n",
     "# Delete compute cluster to avoid extra charges\n",
     "compute_target.delete()"
    ]
