Updated train pipeline VM size

--- a/azure/train_pipeline.ipynb
+++ b/azure/train_pipeline.ipynb
@@ -125,8 +125,8 @@
    "outputs": [],
    "source": [
     "# Define some constants\n",
-    "CT_NAME = \"ds3v2-train\"          # Name of our compute cluster\n",
-    "VM_SIZE = \"STANDARD_DS3_V2\"      # Specify the Azure VM for execution of our pipeline\n",
+    "CT_NAME = \"D13v2-train\"          # Name of our compute cluster\n",
+    "VM_SIZE = \"STANDARD_D13_V2\"      # Specify the Azure VM for execution of our pipeline\n",
     "MIN_NODES = 1                    # Min number of compute nodes in cluster\n",
     "MAX_NODES = 4                    # Max number of compute nodes in cluster\n",
     "\n",
