--- a/azure/train_pipeline.ipynb
+++ b/azure/train_pipeline.ipynb
@@ -221,7 +221,7 @@
     "single_train_pipeline.validate()\n",
     "\n",
     "# Define a new experiment and submit a new pipeline run to the compute target.\n",
-    "experiment = Experiment(workspace=ws, name='MultiTrainExperiment_Test')\n",
+    "experiment = Experiment(workspace=ws, name='MultiTrainExperiment_v1')\n",
     "train_run = experiment.submit(single_train_pipeline, regenerate_outputs=False)\n",
     "print(\"Pipeline is submitted for execution\")\n",
     "\n",
