--- a/azure/train_pipeline.ipynb
+++ b/azure/train_pipeline.ipynb
@@ -125,10 +125,10 @@
    "outputs": [],
    "source": [
     "# Define some constants\n",
-    "CT_NAME = \"D13v2-train\"          # Name of our compute cluster\n",
+    "CT_NAME = \"d13v2-train\"          # Name of our compute cluster\n",
     "VM_SIZE = \"STANDARD_D13_V2\"      # Specify the Azure VM for execution of our pipeline\n",
-    "MIN_NODES = 1                    # Min number of compute nodes in cluster\n",
-    "MAX_NODES = 4                    # Max number of compute nodes in cluster\n",
+    "MIN_NODES = 0                    # Min number of compute nodes in cluster\n",
+    "MAX_NODES = 3                    # Max number of compute nodes in cluster\n",
     "\n",
     "# Set up the compute target for this experiment\n",
     "try:\n",
