Copy whole folders. Added libs for EstimatorStep.

--- a/azure/train_pipeline.ipynb
+++ b/azure/train_pipeline.ipynb
@@ -180,7 +180,7 @@
     "                   compute_target=compute_target,\n",
     "                   entry_script='azure/train_step/train_step.py',\n",
     "                   pip_packages=['tensorboard', 'pandas', 'dill', 'numpy', 'imblearn', 'matplotlib', 'tqdm', 'scikit-learn',\n",
-    "                                'category_encoders'],\n",
+    "                                'category_encoders', 'scipy', 'xgboost'],\n",
     "                   use_gpu=True,\n",
     "                   framework_version='2.0')\n",
     "step2 = EstimatorStep(name=\"multi_train_step\", \n",
